@@ -97,15 +97,18 @@ class SplitSignatureTest (TestCase):
             if cls.__name__.startswith('OC'): continue
             for selName in cls.__dict__.keys():
                 self.assertIsInstance(selName, str)
-                if selName in EXCEPTIONS: continue
-                if selName.startswith('__') and selName.endswith('__'): continue
+                if selName in EXCEPTIONS:
+                    continue
+                if selName.startswith('__') and selName.endswith('__'):
+                    continue
 
                 try:
                     sel = getattr(cls, selName)
                 except (AttributeError, TypeError):
                     continue
 
-                if not isinstance(sel, objc.selector): continue
+                if not isinstance(sel, objc.selector):
+                    continue
                 elems = objc.splitSignature(sel.signature)
 
                 argcount = len(elems) - 3 # retval, self, _sel
